# stockscreener

./: .gitignore  pyproject.toml
finance_project/: test.py
finance_project/finance_project/: stock.py
tests/: test_finance_project.py
