[tool.poetry]
name = "finance_project"
version = "0.1.0"
description = ""
authors = ["Ivaylo Atanasov"]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.1.74"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
